# AIM

./: .gitignore  README.md  app.py  changelog.md  config.py  config.yaml  llm.py  main.py  news.db  news.py  notebook.ipynb  packages.txt  pyproject.toml  requirements.txt  script.py  sentiment.py  setup.py  summarise.py  test.html  test_email.html  test_foreword.py  todo.md  translate.py  tts.py  utils.py  weather.py  webscraper.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
aim/: __init__.py
aim/emailer/: __init__.py  base.py  test_email.html  test_email.py  test_stories.pkl
aim/emailer/templates/: aim_premium.eml  aim_premium_copy.html  (+21 more)
aim/family_notices/: __init__.py  family_notices.py  test_family_notices.py
aim/frontend/: Home.py  auth.py
aim/news/: __init__.py  bailiwick_express_scraper.py  base_scraper.py  database.py  family_notices.py  jep_scraper.py  models.py  news_scraper.py  test_news_scraper.py  test_scrapers.py
aim/nlp/: create_finetuning_data.py  finetune.py  finetuning.py  get_article_summaries.py  test_model.py  validate_training_data.py
aim/radio/: daily_news.py  voice.py
aim/transcribe/: auto_article.py
aim/transistor/: client.py  models.py
aim/weather/: gov_ge.py  gov_je.py  meteo.py
aim_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/: daily_news.py
news/: database.py  models.py  news_scraper.py
scripts/: scrape_and_store.py
transcribe/: auto_article.py
weather/: constants.py  weather.py
web_app/backend/: email_config.py  main.py  scraper_factory.py
web_app/frontend/: index.html
(+18 files in other folders)
