[project]
name = "aim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiolimiter>=1.2.1",
    "bs4>=0.0.2",
    "elevenlabs>=2.13.0",
    "fastapi>=0.117.1",
    "pandas>=2.3.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "selenium-driverless>=1.9.4",
    "standard-imghdr>=3.13.0",
    "streamlit>=1.49.1",
    "uvicorn>=0.36.0",
    "uvloop>=0.21.0",
]
